--- a/exposed-test-starter/src/test/resources/application.yml
+++ b/exposed-test-starter/src/test/resources/application.yml
@@ -3,4 +3,6 @@ spring:
     show-sql: true
 infra:
     exposed:
-      generate-tables: '*'
+      show-sql: true
+      generate-includes: '*'
+      generate-excludes:
