enable TableScan on method

--- a/exposed-test-starter/src/test/resources/application.yml
+++ b/exposed-test-starter/src/test/resources/application.yml
@@ -1,8 +1,3 @@
-spring:
-  exposed:
-    show-sql: true
 infra:
-    exposed:
-      show-sql: true
-      generate-includes: '*'
-      generate-excludes:
+  exposed:
+    generate-schema: true
