--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,6 @@ jobs:
           sed -i -e "s,signing.secretKeyRingFile=,signing.secretKeyRingFile=$GITHUB_WORKSPACE/release.gpg,g" gradle.properties
           cat gradle.properties
       - name: Build with Gradle
-        run: gradle build
+        run: gradle build -x test
       - name: Publish to Maven Central
         run: gradle publishToSonatype closeAndReleaseSonatypeStagingRepository
