add properties for publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
-kotlinVersion="1.6.0"
+PUB_USER=
+PUB_PWD=
+PUB_URL=
+signing.keyId=
+signing.password=
+signing.secretKeyRingFile=
 org.gradle.jvmargs=-Xmx1024m
-
