--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,6 @@ jobs:
           sed -i -e "s,signing.secretKeyRingFile=,signing.secretKeyRingFile=$GITHUB_WORKSPACE/release.gpg,g" gradle.properties
           cat gradle.properties
       - name: Build with Gradle
-        run: gradle build -x test
+        run: gradle build -x test -x kspKotlin -x compileJava
       - name: Publish to Maven Central
         run: gradle publishToSonatype closeAndReleaseSonatypeStagingRepository
