--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ GPR_TOKEN=
 signing.keyId=
 signing.password=
 signing.secretKeyRingFile=
-org.gradle.jvmargs=-Xmx1024m
+org.gradle.jvmargs=-Xmx1024m -Xshare:off
 org.gradle.console=verbose
