--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,8 @@ env:
   MAVEN_USER: ${{ secrets.MAVEN_USER_NAME }}
   MAVEN_KEY: ${{ secrets.MAVEN_USER_PWD }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  PUB_MAVEN: ${{ github.event.inputs.maven_pub }}
-  PUB_GITHUB: ${{ github.event.inputs.github_pub }}
+  PUB_MAVEN: ${{ github.event.inputs.maven_pub || 'Yes' }}
+  PUB_GITHUB: ${{ github.event.inputs.github_pub || 'No' }}
 
 jobs:
   build:
@@ -58,16 +58,8 @@ jobs:
       - name: Build with Gradle
         run: gradle build -x test -x kspKotlin -x compileJava
       - name: Publish To GitHub Packages
-        run: |
-          if [ "$PUB_GITHUB" == "Yes" ]; then
-            gradle publishToGitHubPackages
-          else
-            echo "Skip github packages publish"
-          fi
+        if: ${{ env.PUB_GITHUB == 'Yes' }}
+        run: gradle publishToGitHubPackages
       - name: Publish To Maven Central
-        run: |
-          if [ "PUB_MAVEN" == "No" ]; then
-            echo "Skip maven publish"
-          else
-            gradle publishToSonatype closeAndReleaseSonatypeStagingRepository
-          fi
+        if: ${{ env.PUB_MAVEN == 'Yes' }}
+        run: gradle publishToSonatype closeAndReleaseSonatypeStagingRepository
